---------------------------------------------------------------------------------------------------
Version: 2.2.6
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.2.5
Date: 2021-01-01
  Changes:
    - Moved nichrome-2 recipe to smelter.
---------------------------------------------------------------------------------------------------
Version: 2.2.4
Date: 2020-12-29
  Changes:
    - Moved hightech part casting recipes behind check for pyhightech.
---------------------------------------------------------------------------------------------------
Version: 2.2.3
Date: 2020-12-29
  Changes:
    - Moved some steps of stainless steel and super steel to the Smelter.
---------------------------------------------------------------------------------------------------
Version: 2.2.2
Date: 2020-12-10
  Changes:
    - Migration fix.
---------------------------------------------------------------------------------------------------
Version: 2.2.1
Date: 2020-12-09
  Changes:
    - Added smelter. Warning: All the alloys recipes will be moved to this new building.
---------------------------------------------------------------------------------------------------
Version: 2.2.0
Date: 2020-12-06
  Changes:
    - Fixed crash caused by hightech pipe casting recipe still being enabled when pyhightech was disabled.
---------------------------------------------------------------------------------------------------
Version: 2.1.13
Date: 2020-12-01
  Changes:
    - Removed vanilla bots.
    - Tweak techs to adapt it.
---------------------------------------------------------------------------------------------------
Version: 2.1.12
Date: 2020-11-24
  Changes:
    - Updated to factorio version 1.1.
---------------------------------------------------------------------------------------------------
Version: 2.1.11
Date: 2020-11-20
  Changes:
    - Added new casting recipes.