@@ -2,6 +2,7 @@
 Version: 2.2.6
 Date: ????
   Changes:
+    - Fix crash when rawores was loaded without fusion energy due to missing lead container item.
 ---------------------------------------------------------------------------------------------------
 Version: 2.2.5
 Date: 2021-01-01
